--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,23 @@ color: red;
 font-weight: bolder;
 }
 </style>
+<!--<style> 
+    html { 
+        -webkit-filter: grayscale(100%); 
+        -moz-filter: grayscale(100%); 
+        -ms-filter: grayscale(100%); 
+        -o-filter: grayscale(100%); 
+        filter:progid:DXImageTransform.Microsoft.BasicImage(grayscale=1);  
+        _filter:none; 
+    } 
+</style>-->
+<!-- Start Alexa Certify Javascript -->
+<script type="text/javascript">
+_atrk_opts = { atrk_acct:"arEBu1zDGU20kU", domain:"ooi.moe",dynamic: true};
+(function() { var as = document.createElement('script'); as.type = 'text/javascript'; as.async = true; as.src = "https://certify-js.alexametrics.com/atrk.js"; var s = document.getElementsByTagName('script')[0];s.parentNode.insertBefore(as, s); })();
+</script>
+<noscript><img src="https://certify.alexametrics.com/atrk.gif?account=arEBu1zDGU20kU" style="display:none" height="1" width="1" alt="" /></noscript>
+<!-- End Alexa Certify Javascript -->  
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-74032296-1"></script>
 <script>
@@ -50,8 +67,6 @@ font-weight: bolder;
     <hr>
 
 <br>
-<iframe width="100%" height="200" class="share_self"  frameborder="0" scrolling="no" src="https://widget.weibo.com/weiboshow/index.php?language=&width=0&height=200&fansRow=2&ptype=0&speed=0&skin=4&isTitle=0&noborder=1&isWeibo=1&isFans=0&uid=6089067483&verifier=b001f32b&dpc=1"></iframe>
-<!--<iframe width="100%" height="300" frameborder="0" scrolling="no" src="https://chat.ooi.moe"></iframe>-->
     </div>
 </div>
 <div class="statistics">
@@ -132,23 +147,6 @@ font-weight: bolder;
 
     </div>
 </div>
-
-<div id="status" class="uk-modal">
-<div class="uk-modal-dialog uk-modal-dialog-large">
-        <button type="button" class="uk-modal-close uk-close"></button>
-        <p>服务器状态<p/>
-<iframe src="https://mp.weixin.qq.com/s?__biz=MjM5NzIyMDM2MA==&mid=2649660464&idx=1&sn=99ed67c344b6b3721145dc50c30b5165&chksm=bec7655789b0ec4164c4fe462a8a70d49a1b259ad3b349e8a4c2eae0a480f380a77f114f0429&mpshare=1&scene=1&srcid=&sharer_sharetime=1584954856645&sharer_shareid=97a80cc54fe9aea8732b7a3a46728e12&key=ef447128290e1305f986964698352721cb8cc9d3ea794be57320a344ed13a78ed209e4bcc4b0cb386a63c32f26bf0725c19a399faabb760fb995e5838064132c08bb1225c7d5d9d3ed769888eb47ed10&ascene=1&uin=NTI2MTQ1NQ%3D%3D&devicetype=Windows+10&version=62080079&lang=zh_CN&exportkey=A2uGm%2BoofdbciQrIvRTca14%3D&pass_ticket=RIWxUtsZymbH5PH3ylPKLPCnAmetH2GyZ%2BzCXRpswqY%3D" width="100%" height="800"></iframe>
-        	
-    </div>
-</div>
-
-<!--<div id="twitte" class="uk-modal">
-<div class="uk-modal-dialog uk-modal-dialog-large">
-        <button type="button" class="uk-modal-close uk-close"></button>
-        <iframe src="https://t.kcwiki.moe/index.php" width="100%" height="800"></iframe>
-        	
-    </div>
-</div>-->
 
 <div id="alipay" class="uk-modal">
 <div class="uk-modal-dialog uk-modal-dialog-large">
