--- a/templates/form.html
+++ b/templates/form.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+﻿{% extends 'base.html' %}
 
 {% block content -%}
     <div id="ooi-form" class="uk-width-medium-2-5">
@@ -20,7 +20,7 @@
             <input id="password" maxlength="80" name="password" type="password" placeholder="输入DMM登录密码" class="uk-form-large uk-form-width-large">
           </div>
         </div>
-	<a class="uk-button uk-button-primary" href="http://www.ooi.moe:1443">限时加速节点</a> | <a class="uk-button uk-button-primary" href="#alipay" data-uk-modal>支持渠道</a> | <a class="uk-button uk-button-primary" href="https://store.kancolle.moe/aff.php?aff=1&gid=1" target="_blank">付费专线OOI服务 优惠码:kksk</a>
+	<a class="uk-button uk-button-primary" href="#alipay" data-uk-modal>支持渠道</a> | <a class="uk-button uk-button-primary" href="https://store.kancolle.moe/aff.php?aff=1&gid=1" target="_blank">付费专线OOI服务 优惠码:kksk</a>
         <div class="uk-form-row">
         	<!--<span class="uk-form-label"><font color="red">【阁下也可自行搭建OOI】</font></span>-->
           <span class="uk-form-label">游戏方式：</span>
