--- a/templates/form.html
+++ b/templates/form.html
@@ -1,4 +1,4 @@
-﻿{% extends 'base.html' %}
+{% extends 'base.html' %}
 
 {% block content -%}
     <div id="ooi-form" class="uk-width-medium-2-5">
@@ -9,56 +9,47 @@
       {%- endif %}
       <form  method="post" class="uk-form uk-form-stacked">
         <div class="uk-form-row">
-           <label class="uk-form-label" for="login_id"></label>
+          <label class="uk-form-label" for="login_id">DMM登录ID：</label>
           <div class="uk-form-controls">
-            <input id="login_id" maxlength="80" name="login_id" type="email" placeholder="输入DMM登录邮箱" class="uk-form-large uk-form-width-large">
+            <input id="login_id" maxlength="80" name="login_id" type="email" class="uk-form-large uk-form-width-large">
           </div>
         </div>
         <div class="uk-form-row">
-          <label class="uk-form-label" for="password"></label>
+          <label class="uk-form-label" for="password">DMM登录密码：</label>
           <div class="uk-form-controls">
-            <input id="password" maxlength="80" name="password" type="password" placeholder="输入DMM登录密码" class="uk-form-large uk-form-width-large">
+            <input id="password" maxlength="80" name="password" type="password" class="uk-form-large uk-form-width-large">
           </div>
         </div>
-	<a class="uk-button uk-button-primary" href="#alipay" data-uk-modal>支持渠道</a> | <a class="uk-button uk-button-primary" href="https://store.kancolle.moe/aff.php?aff=1&gid=1" target="_blank">付费专线OOI服务 优惠码:kksk</a>
         <div class="uk-form-row">
-        	<!--<span class="uk-form-label"><font color="red">【阁下也可自行搭建OOI】</font></span>-->
           <span class="uk-form-label">游戏方式：</span>
           <p>
             <input type="radio" id="mode1" name="mode" value="1"{% if mode == 1 %} checked{% endif %}>
             <label for="mode1">在浏览器中运行</label>
           </p>
           <p>
+            <input type="radio" id="mode2" name="mode" value="2"{% if mode == 2 %} checked{% endif %}>
+            <label for="mode2">在KCV/74EO中运行</label>
+          </p>
+          <p>
             <input type="radio" id="mode3" name="mode" value="3"{% if mode == 3 %} checked{% endif %}>
-            <label for="mode3">在POI中运行</label>
+            <label for="mode3">在poi中运行</label>
           </p>
           <p>
             <input type="radio" id="mode4" name="mode" value="4"{% if mode == 4 %} checked{% endif %}>
-            <label for="mode4">直连模式(C2原因暂不可用)</label>
+            <label for="mode4">登录器直连模式</label>
           </p>
         </div>
         <div class="uk-form-row">
           <button class="uk-button uk-button-primary uk-button-large">登录游戏</button>
         </div>
       </form>
-      
     </div>
     <div id="ooi-announcement" class="uk-width-medium-3-5">
-      <!--<h2 class="uk-text-primary">提示</h2>-->
-      <div class="uk-alert uk-alert-danger">
-<a href="" class="uk-alert-close uk-close"></a>
-    <!--<p><a href="#twitte" data-uk-modal>「艦これ」官推查看</a>|<a href="https://zh.kcwiki.org/wiki/游戏更新/2019年2月8日" target="_blank">2月8日游戏更新</a>|<a href="#status" data-uk-modal>运行状态</a></p>-->
-    <p>OOI更多帮助?<a href="#qq" data-uk-modal>加群讨论</a></p>
-    <!--<p>【DMM浏览加速器】<a href="https://manyue.org/aff.php?aff=1&pid=21" target="_blank">点我购买</a>终身9折优惠码：ooioff10</p>-->
-    
-</div>
-
-         
-      <h5>关于OOI系统<a href="#about" data-uk-modal>点击了解</a>【以下信息仅作推荐】</h5>
-      <h5>如果您还没有舰娘账号，又苦于不会进行复杂的抢号操作，或者希望出售手上的舰娘号，可以通过我们的赞助商<a href="#zh" data-uk-modal><strong>舰娘交易平台</strong></a>购买或出售。</h5>
-      <h5>如果您需要氪金、购买正版手办，那么可以通过我们的赞助商<a href="#dk" data-uk-modal>車車DMM充值、手办代购</a>购买。</h5><br>
-      <h5>阁下若有需要可自行搭建ooi，保障绝对安全性。</h5>
-
-     
+      <h2 class="uk-text-primary">提示</h2>
+      <p>本站采用了OOI系统，OOI (Online Objects Integration)是针对DMM网页游戏《艦隊これくしょん -艦これ-》的在线缓存系统。</p>
+      <p>本站只支持DMM账号登录，不支持Facebook和Google账号登录。本网站不会保存任何用户信息，并对本网站服务可能造成的任何后果不负责任。</p>
+      <p>本站的源代码已更新到OOI3，该项目代码采用AGPLv3许可证开源，发布于 <a href="https://github.com/acgx/ooi3" target="_blank">此版本库</a>。</p>
+      <p>如果希望资助我们的项目，可以通过<a href="http://bbs.kancolle.tv/thread-4812-1-1.html" target="_blank">购买赞助商产品</a>的方式支持我们。</p>
+      <p>OOI用户QQ群：337440297 | <a href="https://github.com/acgx/ooi3/issues" target="_blank">汇报bug</a></p>
     </div>
 {%- endblock %}
