--- a/templates/poi.html
+++ b/templates/poi.html
@@ -16,20 +16,23 @@
       overflow: hidden;
     }
     #externalswf {
+      width: 800px;
+      height: 480px;
     }
   </style>
 </head>
 <body>
 <div id="flashWrap">
-  <embed id="externalswf" width="1280" height="800" wmode="opaque" quality="high" bgcolor="#000000" allowscriptaccess="always" base="//{{ host }}/kcs2/"  src="//{{ host }}/kcs2/index.php?api_root=/kcsapi&voice_root=/kcs/sound&osapi_root=osapi.dmm.com&version=4.0.0.0&api_token={{ token }}&api_starttime={{ starttime }}" style="display: block !important;"></embed>
+  <embed id="externalswf" width="1280" height="800" wmode="opaque" quality="high" bgcolor="#000000" allowscriptaccess="always" base="{{ scheme }}://{{ host }}/kcs2/"  src="{{ scheme }}://{{ host }}/kcs2/index.php?api_root=/kcsapi&voice_root=/kcs/sound&osapi_root=osapi.dmm.com&version=4.0.0.0&api_token={{ token }}&api_starttime={{ starttime }}" style="display: block !important;"></embed>
 </div>
 <script>
-    $(function() {
-        window.postMessage = (m) => window.postMessage(m)
-        var swf = $("#externalswf");
-        swf.css("position", "absolute");
-        swf.css("margin", "0");
-    });
+  $(function() {
+    var swf = $("#externalswf");
+    swf.css("width", "100%");
+    swf.css("height", "100%");
+    swf.css("position", "absolute");
+    swf.css("margin", "0");
+  });
 </script>
 <div class="statistics">
 </div>
